# CppCodeingFundamentals

./: .gitignore  Doxyfile  README.md
.secretAnswers/02/: UsingClassObjAnswer.cpp.bk
01-DataTypes/: CMakeLists.txt  README.md
01-DataTypes/src/: CMakeLists.txt  DataTypes.cpp  DataTypes.h  run.cpp
01-DataTypes/test/: CMakeLists.txt  dataTypes_test.cpp  unit_tests.cpp
02-UsingClassObj/: CMakeLists.txt  README.md
02-UsingClassObj/src/: CMakeLists.txt  Motor.cpp  Motor.h  UsingClassObj.cpp  UsingClassObj.h  run.cpp
02-UsingClassObj/test/: CMakeLists.txt  UsingClassObjAnswer.cpp  UsingClassObjAnswer.h  tests.cpp  unit_tests.cpp
